--- a/commons_project/epio.ini
+++ b/commons_project/epio.ini
@@ -11,7 +11,7 @@ requirements = requirements.txt
 [static]
 
 # Serve the static directory directly as /static
-# /static = static_root
+/static = static_root
 
 
 [services]
