--- a/commons_project/requirements.txt
+++ b/commons_project/requirements.txt
@@ -4,3 +4,4 @@ South == 0.7.3
 django-pipes == 0.2
 Unipath
 -e git://github.com/CivComs/django-userena.git#egg=django-userena
+django-debug-toolbar == 0.8.5
