--- a/commons_project/requirements.txt
+++ b/commons_project/requirements.txt
@@ -6,3 +6,8 @@ Unipath
 -e git://github.com/CivComs/django-userena.git#egg=django-userena
 django-debug-toolbar == 0.8.5
 PIL==1.1.7
+easy-thumbnails==1.0-alpha-17
+django-disqus==0.4.1
+#django-filer==0.8.2
+# Must use this fork because 0.8.2 doesn't work (no upload button)
+-e git://github.com/CivComs/django-filer.git#egg=django-filer
