Changes to make uploaded files work correctly in the admin UI.

--- a/commons_project/epio.ini
+++ b/commons_project/epio.ini
@@ -9,6 +9,10 @@ requirements = requirements.txt
 [static]
 # Serve the static directory directly as /static
 /static = static_root
+# Serve the admin media
+static/admin = ../shortcuts/django-admin-media/
+# Serve the ../data directory of user uploads directly too
+/media = ../data
 
 [services]
 # Uncomment to enable the PostgreSQL service.
@@ -35,7 +39,3 @@ DJANGO_SETTINGS_MODULE = production_settings
 [django]
 # Path to your project root, relative to this directory.
 base = .
-
-[static]
-# Serve the admin media
-static/admin = ../shortcuts/django-admin-media/
