Removed distribute tarball (not sure how why that snuck in there), and added new rule to .gitignore file to prevent future occurences.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.py[co]
 *.swp # vim keeps a temporary file open when editing
-*.py~ #
+*.py~ i#
+*.tar.gz # Ignore gzipped tarballs.
 # Packages
 *.egg
 *.egg-info
